# lua-autoconf

./: README  ax_lua.m4  ax_lua2.m4  ax_lua_check.m4  ax_lua_compat.m4  update_readme.lua  update_readme.sh
test/: .gitignore  README  run_test.sh
test/minmaxreq/: configure.ac  some_program.c
test/minmaxreq50/: .gitignore  Makefile.am  configure.ac  some_script.lua
test/minreq/: .gitignore  Makefile.am  configure.ac  some_module.c
test/noreq/: configure.ac
